@@ -20,3 +20,5 @@ _jnaerator.*
 out.errors.txt
 jnaerator-*.jar
 miniupnpc.h.bak
+testupnpreplyparse
+validateupnpreplyparse
